# NotebookFusion

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  template.sh  test.py  tox.ini  video rendering package testing in collab.ipynb
.github/workflows/: ci.yml  python-publish.yml
src/NotebookFusion/: __init__.py  custom_exception.py  logger.py  site.py  youtube.py
tests/: test.py
tests/integration/: test_placeholder.py
tests/unit/: test_custom_exception.py  test_logger.py
