[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebookfusion"
version = "0.0.2"
description = "NotebookFusion package"
authors = [
    { name = "foysalpranto121" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
python_version = "3.10"