[metadata]
license=Apache 
license_file=LICENSE

classifiers =

programming language :: Python :: 3.8
programming language :: Python :: 3.9
programming language :: Python :: 3.10
programming language :: Python :: 3.11
programming language :: Python :: 3.12
programming language :: Python :: 3.13
operating system :: OS Independent

[options]
install_requires =
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.8

[options.extras_require]
testing=
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1

    [options.package_data]
    NotebookFusion=py.typed

    [flake8]
    max-line-length = 160
    exclude=_init__.py

 