[metadata]
license = Apache-2.0
license_files = LICENSE

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.8
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
testing =
    -rrequirements_dev.txt

[options.package_data]
NotebookFusion = py.typed

[flake8]
max-line-length = 127
exclude =
    __init__.py
    .tox
    .git
    build
    dist
    